--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
   <body>
 
     <h1>First header</h1>
-    <h2>Header1</h2>
+    <h2>Header2</h2>
+    <h3>3rd header</h3>
 
     <script src="index.js"></script>
 
